
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="368dp"
    android:layout_height="wrap_content"
>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/colorBlack"
            android:layout_marginLeft="30px"
            android:layout_marginTop="30px"
            android:textSize="40px"
            android:text="@string/userUame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/editRegisterTextUserName"
            android:layout_marginTop="30px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="@string/maxLines"
        />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/colorBlack"
            android:layout_marginLeft="30px"
            android:layout_marginTop="30px"
            android:textSize="40px"
            android:text="@string/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/editRegisterTextPassword"
            android:inputType="textPassword"
            android:layout_marginTop="30px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="@string/maxLines"
        />


    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >

        

        <Button

            android:id="@+id/buttonBack"
            android:text="@string/back"
            android:layout_marginLeft="30pt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textLogin"
            android:textSize="50px"
            android:background="@color/buttonLogin"
        />

        <Button
            android:id="@+id/buttonRegister"
            android:text="@string/register"
            android:layout_marginLeft="30pt"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textRegister"
            android:textSize="50px"
            android:background="@color/buttonRegister"

        />

        


    </LinearLayout>




</LinearLayout>


